playlist_Destroy crash when joining threads
VLC usually (but not always) deadlocks on quit, in case that playback was stopped previously. It doesn't lock if an item is still playing.
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x9002bcb8 in semaphore_wait_trap ()
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x9005fa08 in pthread_join ()
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x000614bc in __vlc_thread_join (p_this=0x401d000, psz_file=0x42686c "playlist/engine.c", i_line=171) at misc/threads.c:758
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x0010abc0 in playlist_Destroy (p_playlist=0x401d000) at playlist/engine.c:171
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x000de7a0 in playlist_ThreadDestroy (p_playlist=0x401d000) at playlist/thread.c:209
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x00082320 in libvlc_InternalCleanup (p_libvlc=0x19bd000) at libvlc-common.c:949
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x0004ee8c in VLC_CleanUp (i_object=0) at libvlc.c:170
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x0000431c in main (i_argc=1, ppsz_argv=0xbffffba4) at src/vlc.c:112
The last shown, related debug messages are always these:
[00000298] main private debug: thread 68092928 joined (playlist/engine.c:169)
[00000299] main private debug: thread 68100096 joined (playlist/engine.c:170)
[00000278] main playlist debug: thread 68142080: possible condition deadlock at playlist/thread.c:190 (Operation timed out)